<resources>
    <string name="app_name">Power Fit</string>
    <string name="title_activity_member_page">MemberPage</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="add_new_member">Add New Member</string>
    <string name="lblbmi">BMI</string>
    <string name="lblschedules">Schedules</string>
    <string name="lblmembers">Members</string>
    <string name="lblhome">HOME</string>
    <string name="lblexcercises">Excercises</string>
    <string name="members">Members</string>
    <string name="_53">53</string>
    <string name="btnAddMember">+</string>
    <string name="id">ID</string>
    <string name="name1">Name</string>
    <string name="view">View</string>
    <string name="lblIDm0001">M0001</string>
    <string name="todo">TODO</string>
    <string name="todo2">TODO</string>
    <string name="todo3">TODO</string>
    <string name="todo4">TODO</string>
    <string name="lblname">Name</string>
    <string name="lblshalitha_alahakoon">Shalitha Alahakoon</string>
    <string name="lblshalitha97608_gmail_com">shalitha97608@gmail.com</string>
    <string name="lbl_0711594026">0711594026</string>
    <string name="lblmale">Male</string>
    <string name="lbl_160cm">160cm</string>
    <string name="lblheight">Height</string>
    <string name="gender">Gender</string>
    <string name="contact">Contact</string>
    <string name="weight">Weight</string>
    <string name="_74_kg">74 Kg</string>
    <string name="email">Email</string>
    <string name="member_details">Member Details</string>
    <string name="edit_details">Edit Details</string>
    <string name="delete_member">Delete Member</string>
    <string name="todo5">TODO</string>
    <string name="todo6">TODO</string>
    <string name="todo7">TODO</string>
    <string name="name2">Name</string>
    <string name="m0003">M0003</string>
    <string name="view_details1">View Details</string>
    <string name="david_peris">David Peris</string>
    <string name="m0004">M0004</string>
    <string name="name3">Name</string>
    <string name="view_details2">View Details</string>
    <string name="michale_jackson1">Michale Jackson</string>
    <string name="name4">Name</string>
    <string name="view_details3">View Details</string>
    <string name="harry_potter">Harry Potter</string>
    <string name="m0002">M0002</string>
    <string name="name5">Name</string>
    <string name="view_details5">View Details</string>
    <string name="shalitha_alahakoon">shalitha Alahakoon</string>
    <string name="name6">Name</string>
    <string name="m0005">M0005</string>
    <string name="robinson_cruso">Robinson Cruso</string>
    <string name="view_details6">View Details</string>
    <string name="name">Name</string>
    <string name="m0006">M0006</string>
    <string name="michale_jackson">Michale Jackson</string>
    <string name="view_details">View Details</string>
    <string name="male">Male</string>
    <string name="cardnameHint">Name</string>
    <string name="cardEmailHint">Email</string>
    <string name="cardContactHint">Contact</string>


    <string-array name="Membership_array">
        <item>Platinum</item>
        <item>Gold</item>
        <item>Silver</item>
        <item>Bronze</item>
    </string-array>


</resources>