<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_bright"
    tools:context=".MemberDetails">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#000000"
        tools:context=".MemberDetails"
        tools:layout_editor_absoluteX="26dp"
        tools:layout_editor_absoluteY="54dp">

        <TextView
            android:id="@+id/textView27"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblname"
            android:textColor="#FFFFFF"
            android:textColorHint="#B8B2B2"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.145"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7"
            app:layout_constraintVertical_bias="0.285" />

        <TextView
            android:id="@+id/textView33"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblshalitha_alahakoon"
            android:textColor="#FFFFFF"
            android:textColorHint="#B8B2B2"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/textView27"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.561"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView27"
            app:layout_constraintVertical_bias="0.26" />

        <TextView
            android:id="@+id/textView34"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblshalitha97608_gmail_com"
            android:textColor="#FFFFFF"
            android:textColorHint="#B8B2B2"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/textView29"
            app:layout_constraintStart_toStartOf="@+id/textView33"
            app:layout_constraintTop_toTopOf="@+id/textView29"
            app:layout_constraintVertical_bias="0.322" />

        <TextView
            android:id="@+id/textView35"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_0711594026"
            android:textColor="#FFFFFF"
            android:textColorHint="#B8B2B2"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/textView28"
            app:layout_constraintStart_toStartOf="@+id/textView34"
            app:layout_constraintTop_toTopOf="@+id/textView28"
            app:layout_constraintVertical_bias="0.384" />

        <TextView
            android:id="@+id/textView36"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblmale"
            android:textColor="#FFFFFF"
            android:textColorHint="#B8B2B2"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/textView32"
            app:layout_constraintStart_toStartOf="@+id/textView35"
            app:layout_constraintTop_toTopOf="@+id/textView32"
            app:layout_constraintVertical_bias="0.445" />

        <TextView
            android:id="@+id/textView37"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_160cm"
            android:textColor="#FFFFFF"
            android:textColorHint="#B8B2B2"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/textView30"
            app:layout_constraintStart_toStartOf="@+id/textView36"
            app:layout_constraintTop_toTopOf="@+id/textView30"
            app:layout_constraintVertical_bias="0.513" />

        <TextView
            android:id="@+id/textView30"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/lblheight"
            android:textColor="#FFFFFF"
            android:textColorHint="#B8B2B2"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textView32"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.464" />

        <TextView
            android:id="@+id/textView32"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/gender"
            android:textColor="#FFFFFF"
            android:textColorHint="#B8B2B2"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textView28"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.434" />

        <TextView
            android:id="@+id/textView28"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/contact"
            android:textColor="#FFFFFF"
            android:textColorHint="#B8B2B2"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textView29"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.404" />

        <TextView
            android:id="@+id/textView31"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weight"
            android:textColor="#FFFFFF"
            android:textColorHint="#B8B2B2"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textView30"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.494" />

        <TextView
            android:id="@+id/textView38"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_74_kg"
            android:textColor="#FFFFFF"
            android:textColorHint="#B8B2B2"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/textView31"
            app:layout_constraintStart_toStartOf="@+id/textView37"
            app:layout_constraintTop_toTopOf="@+id/textView31"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textView29"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/email"
            android:textColor="#FFFFFF"
            android:textColorHint="#B8B2B2"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textView27"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.374" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/member_details"
            android:textColor="#FFF7F7"
            android:textSize="36sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="168dp"
            android:layout_height="167dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.1"
            app:srcCompat="@drawable/shalitha"
            android:contentDescription="@string/todo" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.743"
            app:srcCompat="@drawable/gold"
            android:contentDescription="@string/todo" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/holo_blue_bright"
            android:text="@string/edit_details"
            android:textColor="#0E0E0E"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.856" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/holo_blue_bright"
            android:text="@string/delete_member"
            android:textColor="#0E0E0E"
            app:layout_constraintBottom_toBottomOf="@+id/button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button"
            app:layout_constraintTop_toTopOf="@+id/button" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="132dp" />

</androidx.constraintlayout.widget.ConstraintLayout>